--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -3,3 +3,6 @@
 
 @import 'base/reset';
 @import 'base/typography';
+
+@import '../../components/dashboard/dashboard';
+@import '../../components/dashboard/login/login';
