--- a/client/src/style/css/main.css
+++ b/client/src/style/css/main.css
@@ -56,28 +56,96 @@ a {
   color: inherit;
 }
 
-/*
 @font-face {
-font-family: 'euclid_flexbold';
-src:  url('../../assets/fonts/euclidflex-bold-webfont.woff') format('woff'),
-        url('../../assets/fonts/euclidflex-bold-webfont.woff2') format('woff2');  
-font-weight: bold;
-font-style: normal;
+  font-family: 'zarid_bold';
+  src: url("../../assets/fonts/Zarid-bold.otf") format("opentype");
 }
 
 @font-face {
-font-family: 'euclid_flexregular';
-src: url('../../assets/fonts/EuclidFlex-Regular_webfont.woff2') format('woff2'),
-        url('../../assets/fonts/euclidflex-regular-webfont.woff') format('woff');
-font-weight: normal;
-font-style: normal;
+  font-family: 'zarid_regular';
+  src: url("../../assets/fonts/Zarid-regular.otf") format("opentype");
 }
 
-.primary-heading{
-font-family: 'euclid_flexbold';
-font-size: 14.552rem;
-
-@include respond(sm) {font-size: 3.815rem} 
+@font-face {
+  font-family: 'gt_alpin_bold';
+  src: url("../../assets/fonts/GT_Alpina_bold.otf") format("opentype");
 }
-*/
+
+@font-face {
+  font-family: 'gt_alpin_regular';
+  src: url("../../assets/fonts/GT_Alpina_regular.otf") format("opentype");
+}
+
+.secondary-heading {
+  font-family: 'gt_alpin_bold';
+  font-size: 5rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .secondary-heading {
+    font-size: 3.815rem;
+  }
+}
+
+.small-heading {
+  font-family: 'gt_alpin_regular';
+  font-size: .8rem;
+}
+
+.regular-text {
+  font-family: 'gt_alpin_regular';
+  font-size: 1rem;
+}
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem;
+}
+
+.dashboard__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
+  padding: .5rem 0rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+input[type=text] {
+  font-family: 'gt_alpin_regular';
+  font-size: 1rem;
+}
+
+button {
+  display: block;
+  background: black;
+  color: white;
+  padding: .25rem .5rem;
+  border: none;
+}
+
+.login {
+  display: flex;
+  margin: 1rem 2rem;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+
+.login__button {
+  margin-left: auto;
+  margin-right: auto;
+}
 /*# sourceMappingURL=main.css.map */
