--- a/client/src/components/dashboard/_dashboard.scss
+++ b/client/src/components/dashboard/_dashboard.scss
@@ -1,15 +1,21 @@
+
 .dashboard{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 5rem;
+    padding: 5rem 0;
+    width: 100%;
+
+    margin: 0 auto;
+    
 
     &__title{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-bottom: 2rem;
     }
 }
 
@@ -32,4 +38,8 @@ button{
     color: white;
     padding: .25rem .5rem;
     border: none;
+}
+
+.private{
+    width: inherit;
 }
