--- a/client/src/style/css/main.css
+++ b/client/src/style/css/main.css
@@ -56,6 +56,10 @@ a {
   color: inherit;
 }
 
+.App {
+  width: 100%;
+}
+
 @font-face {
   font-family: 'zarid_bold';
   src: url("../../assets/fonts/Zarid-bold.otf") format("opentype");
@@ -87,6 +91,17 @@ a {
   }
 }
 
+.tertiary-heading {
+  font-family: 'gt_alpin_bold';
+  font-size: 3rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .tertiary-heading {
+    font-size: 3.815rem;
+  }
+}
+
 .small-heading {
   font-family: 'gt_alpin_regular';
   font-size: .8rem;
@@ -102,7 +117,9 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5rem;
+  padding: 5rem 0;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .dashboard__title {
@@ -110,6 +127,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 input {
@@ -136,6 +154,10 @@ button {
   border: none;
 }
 
+.private {
+  width: inherit;
+}
+
 .login {
   display: flex;
   margin: 1rem 2rem;
@@ -147,5 +169,41 @@ button {
 .login__button {
   margin-left: auto;
   margin-right: auto;
+}
+
+.element-toggle {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .element-toggle {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
+
+.element-toggle__button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  user-select: none;
+  border-bottom: 1px solid black;
+}
+
+.element-toggle__button:hover {
+  cursor: pointer;
+}
+
+.element-toggle__arrow {
+  display: inline-block;
+  transform-origin: center;
+}
+
+.element-toggle__toggled {
+  display: hidden;
 }
 /*# sourceMappingURL=main.css.map */
