--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -7,3 +7,4 @@
 @import '../../components/dashboard/dashboard';
 @import '../../components/dashboard/login/login';
 @import '../../components/dashboard/element-toggle/element-toggle';
+@import '../../components/dashboard/users/users';
