--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -7,4 +7,7 @@
 @import '../../components/dashboard/dashboard';
 @import '../../components/dashboard/login/login';
 @import '../../components/dashboard/element-toggle/element-toggle';
+@import '../../components/dashboard/page-selection/page-section-dashboard';
 @import '../../components/dashboard/users/users';
+@import '../../components/dashboard/carouselle/carouselle-dashboard';
+@import '../../components/dashboard/carouselle/content-dashboard';
