--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'base/reset';
 @import 'base/typography';
 
+// Dashboard
 @import '../../components/dashboard/dashboard';
 @import '../../components/dashboard/login/login';
 @import '../../components/dashboard/element-toggle/element-toggle';
@@ -11,3 +12,6 @@
 @import '../../components/dashboard/users/users';
 @import '../../components/dashboard/carouselle/carouselle-dashboard';
 @import '../../components/dashboard/content/content-dashboard';
+
+// App
+@import '../../components/title/title';
