--- a/client/src/components/title/_title.scss
+++ b/client/src/components/title/_title.scss
@@ -3,5 +3,5 @@
   align-items: center;
   justify-content: center;
   border-bottom: $line-weight solid black;
-  transition: all 2ms;
+  transition: all $transition-speed ease;
 }
