--- a/client/src/style/scss/base/_typography.scss
+++ b/client/src/style/scss/base/_typography.scss
@@ -25,21 +25,27 @@
 .primary-heading{
   font-family: 'gt_alpin_bold';
   font-size: 9.313rem;
-  padding: 6rem 0;
+  padding: 3rem 0;
+  user-select: none;
+  cursor: pointer; 
+  transition: all $transition-speed ease;
   @include respond(sm) {font-size: 3.815rem}   
   
   &--small{
     font-size: 1.953rem;
     padding: 1rem 0;
-    @include respond(sm) {font-size: 3.815rem}   
+    transition: all $transition-speed ease;
+    @include respond(sm) {font-size: 1.953rem}   
   }
 }
 
 .secondary-heading{
   font-family: 'gt_alpin_bold';
-  font-size: 5rem;
-  
-  @include respond(sm) {font-size: 3.815rem}   
+  font-size: 1.953rem;
+  user-select: none; 
+  @include respond(sm) {font-size: 1.953rem}   
+
+  &--selected{font-family: 'gt_alpin_regular';}
 }
 
 .tertiary-heading{
