--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -14,4 +14,8 @@
 @import '../../components/dashboard/content/content-dashboard';
 
 // App
+@import '../../components/pages/main';
 @import '../../components/title/title';
+@import '../../components/page-selection/page-selection';
+@import '../../components/carouselle/carouselle';
+@import '../../components/text/text';
