--- a/client/src/style/css/main.css
+++ b/client/src/style/css/main.css
@@ -83,7 +83,10 @@ a {
 .primary-heading {
   font-family: 'gt_alpin_bold';
   font-size: 9.313rem;
-  padding: 6rem 0;
+  padding: 3rem 0;
+  user-select: none;
+  cursor: pointer;
+  transition: all 0.4s ease;
 }
 
 @media only screen and (max-width: 768px) {
@@ -95,23 +98,29 @@ a {
 .primary-heading--small {
   font-size: 1.953rem;
   padding: 1rem 0;
+  transition: all 0.4s ease;
 }
 
 @media only screen and (max-width: 768px) {
   .primary-heading--small {
-    font-size: 3.815rem;
+    font-size: 1.953rem;
   }
 }
 
 .secondary-heading {
   font-family: 'gt_alpin_bold';
-  font-size: 5rem;
+  font-size: 1.953rem;
+  user-select: none;
 }
 
 @media only screen and (max-width: 768px) {
   .secondary-heading {
-    font-size: 3.815rem;
+    font-size: 1.953rem;
   }
+}
+
+.secondary-heading--selected {
+  font-family: 'gt_alpin_regular';
 }
 
 .tertiary-heading {
@@ -358,11 +367,56 @@ button {
   transform: rotate(-90deg);
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background: #fedda8;
+  transition: all 0.4s ease;
+}
+
+.main--alt-color {
+  background: #d2c8e4;
+  transition: all 0.4s ease;
+}
+
 .title {
   display: flex;
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid black;
-  transition: all 2ms;
+  transition: all 0.4s ease;
+}
+
+.page-selection {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  border-bottom: 2px solid black;
+}
+
+.page-selection__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  list-style: none;
+  padding: 1rem 0;
+  border-right: 2px solid black;
+  cursor: pointer;
+}
+
+.page-selection__item:last-child {
+  border: none;
+}
+
+.page-selection__item--selected {
+  background-color: black;
+  color: white;
+  mix-blend-mode: multiply;
+}
+
+.text {
+  flex-grow: 1;
 }
 /*# sourceMappingURL=main.css.map */
