Footer (Without links)

--- a/client/src/style/scss/main.scss
+++ b/client/src/style/scss/main.scss
@@ -19,3 +19,4 @@
 @import '../../components/page-selection/page-selection';
 @import '../../components/carouselle/carouselle';
 @import '../../components/text/text';
+@import '../../components/footer/footer';
