--- a/client/src/style/css/main.css
+++ b/client/src/style/css/main.css
@@ -419,4 +419,21 @@ button {
 .text {
   flex-grow: 1;
 }
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-top: 2px solid black;
+  padding: 1rem 0;
+}
+
+.footer__image {
+  display: block;
+  max-height: 1.5rem;
+  width: auto;
+  height: auto;
+  padding: 0 .15rem;
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
