Rough Text Content

--- a/client/src/components/footer/_footer.scss
+++ b/client/src/components/footer/_footer.scss
@@ -12,6 +12,11 @@
     height: auto;
     padding: 0 .15rem;
 
+    @include respond(sm) {
+      max-height: 2.5rem;
+      padding: 0 1rem;
+    }
+
     cursor: pointer;
   }
 }
